feat: implement Toggle component backend
- Add ToggleComponent class extending JtComponent<Boolean>
- Full Streamlit API compliance with all parameters: label, value, key, help, onChange, disabled, labelVisibility, width
- Builder pattern with comprehensive validation
- Empty mustache templates for future frontend implementation
- Fix Java 17 compatibility issues in pom.xml and JtContainer

Closes #32

Co-authored-by: Cyril de Catheu <cyrilou242@users.noreply.github.com>